--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
