--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.1",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "localforage": "^1.10.0",
@@ -25,7 +26,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
